# chess

./: .bazelignore  .bazelrc  .clang-format  .gitignore  CMakeLists.txt  MODULE.bazel  WORKSPACE.bzlmod  readme.md
.github/workflows/: codecov.yaml  github-actions.yml
src/: CMakeLists.txt
src/chess/: CMakeLists.txt
src/chess/core/: BUILD.bazel  CMakeLists.txt  chessboard.cpp  chessboard.h  codecov.yaml  figure.cpp  figure.h  game.cpp  game.h  move.h  player.h
src/chess/core/tests/: CMakeLists.txt
src/chess/core/tests/unit/: chessboard.test.cpp
src/chess/ui/: BUILD.bazel  CMakeLists.txt  assets_utils.cpp  assets_utils.h  chess_asset_constants.cpp  chess_asset_constants.h  chess_ui.cpp  chess_ui.h  chess_ui_module.cpp  chess_ui_module.h  chess_ui_system.cpp  chess_ui_system.h  chessboard_ui.cpp  chessboard_ui.h  image.cpp  image.h  imgui_overlay.h  imgui_utils.h  main.cpp  types.cpp  types.h
src/chess/ui/assets/chess_set1/Pieces/Black/Tiled Tsx/: Black - Marble 1 128x128.tsx  Black - Plastic 1 128x128.tsx  Black - Rust 1 128x128.tsx  Black - Wood 1 128x128.tsx
src/chess/ui/assets/chess_set1/Pieces/White/Tiled Tsx/: White - Marble 1 128x128.tsx  White - Plastic 1 128x128.tsx  White - Rust 1 128x128.tsx  White - Wood 1 128x128.tsx
src/chess/ui/assets/chess_set1/Tiles/Tiled Tsx/: Marble 1 TD 64x72.tsx  Marble 2 TD 64x72.tsx  Plastic 1 TD 64x72.tsx  Wood 1 TD 64x72.tsx
src/chess/ui/overlays/: debug_mouse_overlay.cpp  debug_mouse_overlay.h  imgui_overlay.h  settings_overlay.cpp  settings_overlay.h
src/chess/ui/single_components/: chessbard_ui_single_component.cpp  chessbard_ui_single_component.h  game_state_single_component.cpp  game_state_single_component.h  important_cells_single_component.h
src/chess/ui/systems/: chess_ui_system.cpp  chess_ui_system.h  chessboard_input_system.cpp  chessboard_input_system.h
src/chess/ui/utils/: assets_utils.cpp  assets_utils.h
src/engine/: BUILD.bazel  CMakeLists.txt  engine.cpp  engine.h
src/engine/base/: color.cpp  color.h  singleton.h  types.h
src/engine/core/: component.cpp  component.h  entity.cpp  entity.h  manager.h  module.cpp  module.h  system.cpp  system.h
src/engine/window/: image.cpp  image.h  image_utils.cpp  image_utils.h  imgui_utils.cpp  imgui_utils.h  types.h  window.cpp  window.h
src/engine/window/render/: renderer.cpp  renderer.h
tools/: bazel_compile_commands.sh
tools/format/: format.sh
